first setup for index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-the index.html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>practice page</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <menu id="menu">
+            <ul class="top-menu" id="top-menu"> 
+                <li id="home">خانه</li>
+                <li id="grocery">محصولات</li>
+                <li id="about-us">درباره ما</li>
+                <li id="conect-us">ارتباط با ما</li>
+            </ul>
+        </menu>
+    </header>
+    <section id="home" class="home"></section>
+    <section id="grocery" class="grocery"></section>
+    <section id="about-us" class="about-us"> </section>
+    <section id="conect-us" class="conect-us"></section>
+    <script src="script.js"></script>
+</body>
+</html>
